# reasonml

./: .gitignore  .travis-ci.sh  .travis.yml  Makefile  README.md  bsconfig.json  config.json  package-lock.json  package.json  travis.yml
.appends/.github/: labels.yml
.github/: labels.yml
.github/workflows/: main.yml  pause-community-contributions.yml
config/: exercise_readme.go.tmpl  maintainers.json
docs/: ABOUT.md  INSTALLATION.md  LEARNING.md  RESOURCES.md  TESTS.md  config.json
exercises/accumulate/: README.md  bsconfig.json  package-lock.json  package.json
exercises/acronym/: README.md  bsconfig.json  package-lock.json  package.json
exercises/all-your-base/: README.md  package-lock.json  package.json
exercises/allergies/: README.md  bsconfig.json  package-lock.json  package.json
exercises/anagram/: README.md  bsconfig.json  package.json
exercises/armstrong-numbers/: README.md  package-lock.json  package.json
exercises/binary-search/: README.md  bsconfig.json  package.json
exercises/bob/: README.md  package-lock.json  package.json
exercises/change/: README.md  bsconfig.json  package-lock.json  package.json
exercises/hello-world/: README.md  package-lock.json  package.json
exercises/isogram/: README.md  bsconfig.json  package-lock.json  package.json
reference/: implementing-a-concept-exercise.md
template/: Makefile  README.md  app.re  bsconfig.json  dune  dune-project  hello_exercism.opam  jest.config.js  package.json  runtests.js
template/lib/: dune
template/src/: Example.re
template/test/: Example_test.re  dune  lib_test.re
(+306 files in other folders)
