opam-version: "2.0"
synopsis: "My Melange library"
description: "A library for Melange"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "XXX"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml"
  "reason" {>= "3.14.0"}
  "dune" {>= "3.9"}
  "melange" {>= "4.0.0"}
  "melange-fest" {with-test}
]
dev-repo: "git+https://github.com/your/project.git"